--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-    <script src='app.js'></script>
+    <script async src='app.js'></script>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-   <!-- highlight.js -->
-    <link rel="stylesheet" href="/path/to/styles/default.css">
-    <script src="/path/to/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 
 <body>
@@ -58,21 +54,19 @@
                     <h2>Related topics</h2>
                     <p><strong>JavaScript</strong></p>
                     <ul class="aside-list">
-                        <li><a href="functions/fakeForEach.html" target="_blank"
-                                rel="noopener noreferrer">fakeForEach</a></li>
-                        <li><a href="functions/fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a>
-                        </li>
-                        <li><a href="functions/fakeEvery.html" target="_blank" rel="noopener noreferrer">fakeEvery</a>
-                        </li>
-                        <li><a href="functions/fakeFind.html" target="_blank" rel="noopener noreferrer">fakeFind</a>
-                        </li>
-                        <li><a href="functions/fakeIncludes.html" target="_blank"
-                                rel="noopener noreferrer">fakeIncludes</a></li>
+                        <li><a href="functions/fakeForEach.html" target="_blank" rel="noopener noreferrer">fakeForEach</a></li>
+                        <li><a href="functions/fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
+                        <li><a href="functions/fakeEvery.html" target="_blank" rel="noopener noreferrer">fakeEvery</a></li>
+                        <li><a href="functions/fakeFind.html" target="_blank" rel="noopener noreferrer">fakeFind</a></li>
+                        <li><a href="functions/fakeIncludes.html" target="_blank" rel="noopener noreferrer">fakeIncludes</a></li>
                         <li><a href="functions/fakeMap.html" target="_blank" rel="noopener noreferrer">fakeMap</a></li>
-                        <li><a href="functions/fakeFilter.html" target="_blank" rel="noopener noreferrer">fakeFilter</a>
-                        </li>
-                        <li><a href="functions/fakeReduce.html" target="_blank" rel="noopener noreferrer">fakeReduce</a>
-                        </li>
+                        <li><a href="functions/fakeFilter.html" target="_blank" rel="noopener noreferrer">fakeFilter</a></li>
+                        <li><a href="functions/fakeReduce.html" target="_blank" rel="noopener noreferrer">fakeReduce</a></li>
+                        <li><a href="functions/fakeIndexOf.html" target="_blank" rel="noopener noreferrer">fakeIndexOf</a></li>
+                        <li><a href="functions/fakeIndexOfRecursive.html" target="_blank" rel="noopener noreferrer">fakeIndexOfRecursive</a></li>
+                        <li><a href="functions/fakeIntersection.html" target="_blank" rel="noopener noreferrer">fakeIntersection</a></li>
+                        <li><a href="functions/fakeUnion.html" target="_blank" rel="noopener noreferrer">fakeUnion</a></li>
+                        <li><a href="functions/fakeSum.html" target="_blank" rel="noopener noreferrer">fakeSum</a></li>
                     </ul>
                 </aside>
                 <article class="info-text">
