--- a/functions/fakeMap.html
+++ b/functions/fakeMap.html
@@ -5,6 +5,9 @@
     <title>fakeMap</title>
     <link rel="stylesheet" href="../styles.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"> </script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/atom-one-light.min.css">  
   </head>
 
   <body>
@@ -44,13 +47,17 @@
       <aside class="column-aside">
         <p class="aside-title">Otros métodos</p>
         <ul class="aside-list">
-          <li><a href="fakeForEach.html" target="_blank" rel="noopener noreferrer">fakeForEach</a></li>
-          <li><a href="fakeReduce.html" target="_blank" rel="noopener noreferrer">fakeReduce</a></li>
-          <li><a href="fakeEvery.html" target="_blank" rel="noopener noreferrer">fakeEvery</a></li>
-          <li><a href="fakeFind.html" target="_blank" rel="noopener noreferrer">fakeFind</a></li>
-          <li><a href="fakeIncludes.html" target="_blank" rel="noopener noreferrer">fakeIncludes</a></li>
-          <li><a href="fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
-          <li><a href="fakeFilter.html" target="_blank" rel="noopener noreferrer">fakeFilter</a></li>
+            <li><a href="fakeForEach.html" target="_blank" rel="noopener noreferrer">fakeForEach</a></li>
+            <li><a href="fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
+            <li><a href="fakeEvery.html" target="_blank" rel="noopener noreferrer">fakeEvery</a></li>
+            <li><a href="fakeFind.html" target="_blank" rel="noopener noreferrer">fakeFind</a></li>
+            <li><a href="fakeIncludes.html" target="_blank" rel="noopener noreferrer">fakeIncludes</a></li>
+            <li><a href="fakeFilter.html" target="_blank" rel="noopener noreferrer">fakeFilter</a></li>
+            <li><a href="fakeReduce.html" target="_blank" rel="noopener noreferrer">fakeReduce</a></li>
+            <li><a href="fakeIndexOf.html" target="_blank" rel="noopener noreferrer">fakeIndexOf</a></li>
+            <li><a href="fakeIndexOfRecursive.html" target="_blank" rel="noopener noreferrer">fakeIndexOfRecursive</a></li>
+            <li><a href="fakeIntersection.html" target="_blank" rel="noopener noreferrer">fakeIntersection</a></li>
+            <li><a href="fakeSum.html" target="_blank" rel="noopener noreferrer">fakeSum</a></li>
         </ul>
       </aside>
       <article>
@@ -90,17 +97,25 @@
         <div>
           <h2>Ejemplo</h2>
           <h3>Procesar un array de números aplicándoles la raíz cuadrada</h3>
-          <div class="syntaxbox">
-            <p><code>const numeros= [1, 4, 9];</code></p>
-            <p><code>fakeMakp(numeros, Math.sqrt);</code></p>
-            <p><code>>> [1, 2, 3]</code></p>
-          </div>
+          <pre>
+              <code class="javascript">
+    const numeros= [1, 4, 9];
+
+    fakeMakp(numeros, Math.sqrt);
+              
+    >> [1, 2, 3]
+            </code>
+          </pre>
           <h3>Mapear un array de números usando una función con un argumento</h3>
-          <div class="syntaxbox">
-            <p><code>const numeros = [1, 4, 9];</code></p>
-            <p><code>const dobles = fakeMap(numeros, (function(num) { return num * 2; });</code></p>
-            <p><code>>>> dobles = [2, 8, 18]</code></p>
-          </div>
+          <pre>
+              <code class="javascript">
+    const numeros = [1, 4, 9];
+
+    const dobles = fakeMap(numeros, (function(num) { return num * 2; });
+
+    >>> dobles = [2, 8, 18]
+            </code>
+          </pre>
         </div>
       </article>
     </div>
