--- a/functions/fakeUnion.html
+++ b/functions/fakeUnion.html
@@ -5,6 +5,9 @@
     <title>fakeMap</title>
     <link rel="stylesheet" href="../styles.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"> </script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/atom-one-light.min.css"> 
   </head>
 
   <body>
@@ -45,13 +48,13 @@
         <p class="aside-title">Otros métodos</p>
         <ul class="aside-list">
           <li><a href="fakeForEach.html" target="_blank" rel="noopener noreferrer">fakeForEach</a></li>
-          <li><a href="fakeReduce.html" target="_blank" rel="noopener noreferrer">fakeReduce</a></li>
+          <li><a href="fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
           <li><a href="fakeEvery.html" target="_blank" rel="noopener noreferrer">fakeEvery</a></li>
           <li><a href="fakeFind.html" target="_blank" rel="noopener noreferrer">fakeFind</a></li>
           <li><a href="fakeIncludes.html" target="_blank" rel="noopener noreferrer">fakeIncludes</a></li>
-          <li><a href="fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
-          <li><a href="fakeFilter.html" target="_blank" rel="noopener noreferrer">fakeFilter</a></li>
           <li><a href="fakeMap.html" target="_blank" rel="noopener noreferrer">fakeMap</a></li>
+          <li><a href="fakeFilter.html" target="_blank" rel="noopener noreferrer">fakeFilter</a></li>
+          <li><a href="fakeReduce.html" target="_blank" rel="noopener noreferrer">fakeReduce</a></li>
           <li><a href="fakeIndexOf.html" target="_blank" rel="noopener noreferrer">fakeIndexOf</a></li>
           <li><a href="fakeIndexOfRecursive.html" target="_blank" rel="noopener noreferrer">fakeIndexOfRecursive</a></li>
           <li><a href="fakeIntersection.html" target="_blank" rel="noopener noreferrer">fakeIntersection</a></li>
@@ -85,12 +88,17 @@
         <div>
           <h2>Ejemplo</h2>
           <h3>Unir dos arrays de números sin repeticiones</h3>
-          <div class="syntaxbox">
-            <p><code>const firstArray = [1, 2, 3];</code></p>
-            <p><code>const secondArray = [3, 4, 5];</code></p>
-            <p><code>fakeUnion(firstArray, secondArray);</code></p>
-            <p><code>>> [1, 2, 3, 4, 5]</code></p>
-          </div>
+          <pre>
+              <code class="javascript">
+  const firstArray = [1, 2, 3];
+
+  const secondArray = [3, 4, 5];
+              
+  fakeUnion(firstArray, secondArray);
+              
+  >> [1, 2, 3, 4, 5]
+            </code>
+          </pre>
         </div>
       </article>
     </div>
