change example for the includes

--- a/functions/fakeIncludes.html
+++ b/functions/fakeIncludes.html
@@ -92,10 +92,8 @@
           <h3>Usando Includes</h3>
           <pre>
               <code class="javascript">
-    let array = 'To be, or not to be, that is the question.';
-    const element= 'question';
-
-    fakeinclude(array, element);
+    let array = [1, 2, 3];
+    console.log(fakeIncludes(array, 2));
 
     >> True
           </code>
