Corrige contenido de title y del ejemplo

--- a/functions/fakeIndexOfRecursive.html
+++ b/functions/fakeIndexOfRecursive.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>fakeMap</title>
+    <title>fakeIndexOfRecursive</title>
     <link rel="stylesheet" href="../styles.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"> </script>
@@ -54,11 +54,11 @@
           <li><a href="fakeIncludes.html" target="_blank" rel="noopener noreferrer">fakeIncludes</a></li>
           <li><a href="fakeSome.html" target="_blank" rel="noopener noreferrer">fakeSome</a></li>
           <li><a href="fakeFilter.html" target="_blank" rel="noopener noreferrer">fakeFilter</a></li>
-					<li><a href="fakeMap.html" target="_blank" rel="noopener noreferrer">fakeMap</a></li>
-					<li><a href="fakeIndexOf.html" target="_blank" rel="noopener noreferrer">fakeIndexOf</a></li>
+	  <li><a href="fakeMap.html" target="_blank" rel="noopener noreferrer">fakeMap</a></li>
+	  <li><a href="fakeIndexOf.html" target="_blank" rel="noopener noreferrer">fakeIndexOf</a></li>
           <li><a href="fakeUnion.html" target="_blank" rel="noopener noreferrer">fakeUnion</a></li>
           <li><a href="fakeIntersection.html" target="_blank" rel="noopener noreferrer">fakeIntersection</a></li>
-					<li><a href="fakeSum.html" target="_blank" rel="noopener noreferrer">fakeSum</a></li>
+	  <li><a href="fakeSum.html" target="_blank" rel="noopener noreferrer">fakeSum</a></li>
         </ul>
       </aside>
       <article>
@@ -91,13 +91,13 @@
         <div>
           <h2>Ejemplo</h2>
           <h3>Encontrar valores en un array</h3>
-					<pre>
-						<code class="javascript">
-		const numbers = [2, 3, 9, 8, 67, 7];
-		fakeIndexOfRecursive(numbers, 67);
-		>> 4
-						</code>
-					</pre>							
+	  <pre>
+	    <code class="javascript">
+	const numbers = [2, 3, 9, 8, 67, 7];
+	fakeIndexOfRecursive(numbers, 67);
+	>> 4
+	    </code>
+	  </pre>							
         </div>
       </article>
     </div>
