--- a/functions/fakeIndexOf.html
+++ b/functions/fakeIndexOf.html
@@ -60,7 +60,7 @@
       </aside>
       <article>
         <section class="description">
-          El método <code>fakeIndexOf()</code> retorna el primer índice en el que se puede encontrar un elemento dado en el array, ó retorna -1 si el elemento no esta presente.
+          El método <code>fakeIndexOf()</code> retorna el primer índice en el que se puede encontrar un elemento dado en el array, ó retorna -1 si el elemento no está presente.
         </section>
         <section>
           <h2>Sintaxis</h2>
@@ -71,18 +71,18 @@
               <code class="code-params">array</code>
             </dt>
             <dd class="param-description">
-              El array sobre cuyos elementos se comprueba si cumplen con la condición provista por la función.
+              El array sobre el cual se va a buscar el elemento dado.
             </dd>
-            <dt>
+            <!-- <dt>
               <code class="code-params">callback</code>
             </dt>
             <dd class="param-description">
               Función que se va a aplicar a los elementos hasta encontrar alguno que la cumpla.
             </dd>
-          </dl>
+          </dl> -->
           <h3>Valor de retorno</h3>
           <p class="param-description">
-            Devuelve <code>i</code> del elemento que buscaba y <code>-1</code> si no lo encuentra en
+            Devuelve <code>el indice</code> del elemento que buscaba y <code>-1</code> si no lo encuentra en
             el array.
           </p>
         </section>
