change title and callback

--- a/functions/fakeUnion.html
+++ b/functions/fakeUnion.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>fakeMap</title>
+    <title>fakeUnion</title>
     <link rel="stylesheet" href="../styles.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"> </script>
@@ -76,9 +76,9 @@
             <dd class="param-description">
               Los arrays que se unirán para conformar el nuevo array a devolver.
             </dd>
-            <dt>
+            <!-- <dt>
               <code class="code-params">callback</code>
-            </dt>
+            </dt> -->
           </dl>
           <h3>Valor de retorno</h3>
           <p class="param-description">
