Agrega valor del retorno para arrays vacíos

--- a/functions/fakeArrayMin.html
+++ b/functions/fakeArrayMin.html
@@ -99,7 +99,10 @@
             </dd>
           </dl>
           <h3>Valor de retorno</h3>
-          <p class="param-description">Devuelve un <code>number</code> o un <code>string</code>.</p>
+          <p class="param-description">
+            Devuelve un <code>number</code> o un <code>string</code>, o <code>undefined</code> en caso de que el array
+            esté vacío.
+          </p>
         </section>
         <div>
           <h2>Ejemplo</h2>
