--- a/functions/fakeArrayMax.html
+++ b/functions/fakeArrayMax.html
@@ -59,7 +59,7 @@
       </div>
     </header>
     <!-- header -->
-    <h1>fakeMap</h1>
+    <h1>fakeArrayMax</h1>
     <div class="container-aside-article">
       <aside class="column-aside">
         <p class="aside-title">Otros métodos</p>
