Corrige texto del h1

--- a/functions/fakeSum.html
+++ b/functions/fakeSum.html
@@ -42,7 +42,7 @@
       </div>
   </header>
     <!-- header -->
-    <h1>fakeMap</h1>
+    <h1>fakeSum</h1>
     <div class="container-aside-article">
       <aside class="column-aside">
         <p class="aside-title">Otros métodos</p>
@@ -62,7 +62,7 @@
       </aside>
       <article>
         <section class="description">
-          El método <code>fakeSum()</code> calcula la suma de los valores de un array.
+          El método <code>fakeSum()</code> calcula la suma de los valores de un array. 
         </section>
         <section>
           <h2>Sintaxis</h2>
@@ -73,7 +73,7 @@
               <code class="code-params">array</code>
             </dt>
             <dd class="param-description">
-              El array sobre cuyos valores serán sumados.
+              El array sobre cuyos valores serán sumados. 
             </dd>
           </dl>
           <h3>Valor de retorno</h3>
@@ -85,7 +85,7 @@
           <h2>Ejemplo</h2>
           <h3>Sumar los valores de un array</h3>
           <pre>
-              <code class="javascript">
+             <code class="javascript">
     const numeros= [2, 5, 9, 15];
 
     fakeSum(numeros);
