--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
               <li><a href="functions/fakeSum.html" target="_blank" rel="noopener noreferrer">fakeSum</a></li>
               <li><a href="functions/fakeArrayMin.html" target="_blank" rel="noopener noreferrer">fakeArrayMin</a></li>
               <li><a href="functions/fakeArrayMax.html" target="_blank" rel="noopener noreferrer">fakeArrayMax</a></li>
+              <li><a href="functions/areEqual.html" target="_blank" rel="noopener noreferrer">areEqual</a></li>
             </ul>
           </aside>
           <article class="info-text">
