add link fakeLastIndexOf in index.html and change h3 and parameters

--- a/functions/fakeLastIndexOf.html
+++ b/functions/fakeLastIndexOf.html
@@ -57,6 +57,9 @@
             <li><a href="fakeIntersection.html" target="_blank" rel="noopener noreferrer">fakeIntersection</a></li>
             <li><a href="fakeUnion.html" target="_blank" rel="noopener noreferrer">fakeUnion</a></li>
             <li><a href="fakeSum.html" target="_blank" rel="noopener noreferrer">fakeSum</a></li>
+            <li><a href="fakeArrayMin.html" target="_blank" rel="noopener noreferrer">fakeArrayMin</a></li>
+            <li><a href="fakeArrayMax.html" target="_blank" rel="noopener noreferrer">fakeArrayMax</a></li>
+            <li><a href="areEqual.html" target="_blank" rel="noopener noreferrer">areEqual</a></li>
         </ul>
       </aside>
       <article>
@@ -65,15 +68,9 @@
         </section>
         <section>
           <h2>Sintaxis</h2>
-          <p class="syntaxbox">fakeLastIndexOf(<em>array</em>, <em>element</em>)</p>
+          <p class="syntaxbox">fakeLastIndexOf(<em>element</em>)</p>
           <h3>Parámetros</h3>
           <dl>
-            <dt>
-              <code class="code-params">array</code>
-            </dt>
-            <dd class="param-description">
-              El array sobre el cual el método busca el indice del elemento que le fue indicado.
-            </dd>
             <dt>
               <code class="code-params">Element</code>
             </dt>
@@ -88,7 +85,7 @@
         </section>
         <div>
           <h2>Ejemplo</h2>
-          <h3>Mostrar cada elemento del array</h3>
+          <h3>Buscando elementos en un array</h3>
             <pre>
               <code class="javascript">
 
