--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
               <li><a href="functions/fakeArrayMin.html" target="_blank" rel="noopener noreferrer">fakeArrayMin</a></li>
               <li><a href="functions/fakeArrayMax.html" target="_blank" rel="noopener noreferrer">fakeArrayMax</a></li>
               <li><a href="functions/areEqual.html" target="_blank" rel="noopener noreferrer">areEqual</a></li>
+              <li><a href="functions/fakeLastIndexOf.html" target="_blank" rel="noopener noreferrer">fakeLastIndexOf</a></li>
             </ul>
           </aside>
           <article class="info-text">
